--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StopWatch</title>
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="watch-container">
+        <h1><i class="fas fa-stopwatch"></i> StopWatch</h1>
+        <span class="watch-display">0</span>
+        <div class="buttons">
+            <button class="start"><i class="fas fa-running"></i> Start</button>
+            <button class="stop"><i class="fas fa-tired"></i> Stop</button>
+            <button class="reset"><i class="fas fa-reply"></i> Reset</button>
+        </div>
+    </div>
     <script src="./app.js"></script>
 </body>
 </html>
