--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <div class="watch-container">
         <h1><i class="fas fa-stopwatch"></i> StopWatch</h1>
-        <span class="watch-display">0</span>
+        <span id="watch-display">0</span>
         <div class="buttons">
-            <button class="start"><i class="fas fa-running"></i> Start</button>
-            <button class="stop"><i class="fas fa-tired"></i> Stop</button>
-            <button class="reset"><i class="fas fa-reply"></i> Reset</button>
+            <button id="start"><i class="fas fa-running"></i> Start</button>
+            <button id="stop"> Stop</button>
+            <button id="reset"><i class="fas fa-reply"></i> Reset</button>
         </div>
     </div>
     <script src="./app.js"></script>
